--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
+    "axios": "^1.2.1",
     "bootstrap": "5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
